--- a/src/pages/(loggedIn)/BookRoom/BookRoom.scss
+++ b/src/pages/(loggedIn)/BookRoom/BookRoom.scss
@@ -439,3 +439,18 @@
   font-style: italic;
 }
 
+.confirm-button {
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: #8b5cf6;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: 600;
+
+  &:hover {
+    background-color: #7c3aed;
+  }
+}
+
