fixed the donation graph

--- a/src/pages/(loggedIn)/donation/Donation.scss
+++ b/src/pages/(loggedIn)/donation/Donation.scss
@@ -841,3 +841,25 @@
     }
   }
 }
+
+.positive {
+  color: green;
+}
+
+.negative {
+  color: red;
+}
+
+.total-content {
+  .growth-indicator {
+    span {
+      &.positive {
+        color: #22c55e !important;
+      }
+      
+      &.negative {
+        color: #ef4444 !important;
+      }
+    }
+  }
+}
