--- a/src/components/ui/GuestDetailsPopup/GuestDetailsPopup.scss
+++ b/src/components/ui/GuestDetailsPopup/GuestDetailsPopup.scss
@@ -461,7 +461,7 @@
             }
 
             &.allocate-btn {
-                background-color: #4A90E2;
+                background-color: #9867E9;
                 color: white;
                 border: none;
                 padding: 8px 16px;
@@ -469,7 +469,7 @@
                 cursor: pointer;
                 
                 &:hover {
-                    background-color: #357ABD;
+                    background-color: #9867E9;
                 }
             }
         }
