--- a/src/pages/applicationForm/applicationTabs/VerifyDetails/VerifyDetails.scss
+++ b/src/pages/applicationForm/applicationTabs/VerifyDetails/VerifyDetails.scss
@@ -1,12 +1,17 @@
 .verify-details {
-  padding: 20px;
+  padding: 10px;
   font-family: Nunito Sans, Arial, sans-serif;
+
+
+max-width: 100%;
+ 
+
 
   h1 {
     font-size: 28px;
     font-weight: 800;
     color: #9867e9;
-    margin-left: 65px;
+    // margin-left: 65px;
   }
 
   .table-container {
@@ -19,7 +24,7 @@
       border-collapse: collapse;
       th {
         padding: 10px;
-        border: 1px solid #ddd;
+        border: 1px solid #000;
         font-size: 15px;
         color: black;
         font-weight: 500;
@@ -27,7 +32,7 @@
 
       td {
         padding: 10px;
-        border: 1px solid #ddd;
+        border: 1px solid #000;
         font-size: 15px;
         color: black;
         font-weight: 200;
@@ -36,7 +41,8 @@
   }
 
   .details-section {
-    margin-left: 99px;
+    margin-left: 26px;
+    padding: 10px;
     margin-top: 20px;
     font-size: 14px;
     display: flex;
@@ -49,51 +55,66 @@
     }
 
     strong {
-      color: #333;
+     font-size: 18px;
+    }
+    span{
+      font-size: 18px;
+
     }
   }
   .edit-icon {
-    width: 15px;
+    width: 45px;
     height: 15px;
-    margin-left: 10px;
+    margin-left: 15px;
   }
 
   .address-details {
-    margin: 20px 0;
+    margin: 10px 0;
     display: flex;
     flex-direction: column;
     gap: 20px;
 
     h2 {
-      font-size: 19px;
+      font-size: 23px;
       color: black;
-      margin-left: 65px;
+      // margin-left: 65px;
 
       margin-bottom: 10px;
     }
 
     .address-block {
-      margin-bottom: 20px;
+      
       padding: 10px;
       // border: 1px solid #ddd;
       border-radius: 5px;
       display: flex;
       gap: 20px;
       flex-direction: column;
-      margin-left: 75px;
+      margin-left: 37px;                                                                         
 
       h3 {
-        font-size: 19px;
+        font-size: 21px;
+        font-weight: bold;
+        // border: 1px solid black;
+        margin-top: -5px;
+        margin-left: 5px;
 
-        margin-bottom: 10px;
+        // margin-bottom: 10px;
       }
 
       p {
         margin: 5px 0;
         font-size: 14px;
+        margin-top: 0px;
+        display: flex;
+        gap: 50px;
 
         strong {
-          color: #333;
+          font-size: 18px;
+        }
+        span{
+          font-size: 18px;
+
         }
       }
     }
@@ -105,23 +126,32 @@
   }
 
   .button-container {
+   
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    gap: 20px;
+    margin-right: 105px;
+    gap: 10px;
 
     .save {
+     
       background-color: white;
       color: #9867e9;
       width: 150px;
       height: 40px;
       text-align: center;
-      font-size: 20px;
+      font-size: 18px;
 
       border-radius: 5px;
       margin: 0;
       border: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+     
+    
+      white-space: nowrap;
     }
 
     .submit-button {
@@ -134,6 +164,10 @@
       border-radius: 5px;
       margin: 0;
       border: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
     }
   }
 }
