--- a/src/pages/applicationForm/applicationTabs/applicationDetails/ApplicationDetails.scss
+++ b/src/pages/applicationForm/applicationTabs/applicationDetails/ApplicationDetails.scss
@@ -411,6 +411,7 @@
     background: #fff;
     box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.123);
     transition: all 0.2s ease;
+    height: 40px;
     
     &:hover {
       border-color: #9867e9;
